# brewblox-service

./: .bumpversion.cfg  .env  .gitignore  .travis.yml  Pipfile  README.md  azure-pipelines.yml  bump.sh  create_db.py  deploy_docker.py  deploy_docker.sh  distcopy.sh  manage.py  pyproject.toml  requirements.txt  run.py  setup.py  sync-server.py  test.py  tox.ini
.github/workflows/: build.yml
brewblox_service/: __init__.py  __main__.py  announcer.py  cors.py  cors_middleware.py  couchdb.py  couchdb_client.py  discovery.py  events.py  features.py  handler.py  http.py  http_client.py  middlewares.py  models.py  mqtt.py  repeater.py  scheduler.py  service.py  testing.py
brewpi_service/: __init__.py  admin.py  commands.py  database.py  plugins.py  rest.py  tasks.py
brewpi_service/controller/: __init__.py  events.py  fields.py  models.py  profile.py  resources.py  rest.py  schemas.py  state.py
brewpi_service/controller/blocks/: __init__.py  models.py  schemas.py
brewpi_service/datasync/: abstract.py  controlbox.py  database.py  legacy.py  syncher.py
brewpi_service/datasync/backends/: brewpi_legacy.py  mock.py
brewpi_service/plugins/: core.py  rest.py  schemas.py
docker/: Dockerfile
docker/amd/: Dockerfile
docker/arm/: Dockerfile
docs/: conf.py  index.rst  make.bat  requirements-docs.txt
docs/development/: plugins.rst
docs/source/: conf.py  index.rst
new/: ev.py  requirements-dev.txt  requirements.txt  setup.py  tox.ini
new/brewblox_service/: __main__.py  announcer.py  events.py  plugger.py  rest.py  service.py  simulator.py
new/test/: _announcer.py  _main.py  _simulator.py  conftest.py  test_announcer.py  test_events.py  test_main.py  test_plugger.py  test_rest.py  test_service.py  test_simulator.py
old/: .travis.yml  requirements-dev.txt  requirements.txt  setup.py  sync-server.py  tox.ini
old/brewpi_service/: __init__.py  commands.py  sse.py
old/docs/: Makefile
rpi-docker/: Dockerfile
template/: README.md  TEMPLATE_README.md  setup.py
test/: conftest.py  test_couchdb.py  test_couchdb_client.py  test_discovery.py  test_events.py  test_features.py  test_http.py  test_main.py  test_mqtt.py  test_repeater.py  test_scheduler.py  test_service.py  test_testing.py  test_utils.py
(+54 files in other folders)
