[tool.poetry]
name = "brewblox-service"
version = "1.0.1"
description = "Scaffolding for Brewblox backend services"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.pyright]
include = ["brewblox_service"]
exclude = ["**/node_modules", "**/__pycache__"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
aiohttp = ">=3.7"
aiomqtt = ">=0.1"
aiohttp-pydantic = ">=1.12"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest-flake8 = "^1.1.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
pytest-aiohttp = "^1.0.4"
autopep8 = "^1.6.0"
aresponses = "^2.1.4"
pytest = "^7.1.2"
flake8-quotes = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
