[tool.poetry]
name = "brewblox-service"
version = "3.0.0"
description = "Scaffolding for Brewblox backend services"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.pyright]
include = ["brewblox_service"]
exclude = ["**/node_modules", "**/__pycache__"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
aiohttp = "==3.*"
aiomqtt = "==1.*"
aiohttp-pydantic = "==1.*"
pydantic = "==1.*"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-aiohttp = "*"
autopep8 = "*"
aresponses = "*"
pytest = "*"
flake8-quotes = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
